--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/fevicon.png" type="">
 
-  <title> Carint </title>
+  <title> REEF AL ABRAR GENERAL TRADING </title>
 
 
   <!-- bootstrap core css -->
@@ -58,7 +58,7 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Location
+                AKR international export&import,MG ROAD KOCHI
               </span>
             </a>
           </div>
@@ -69,7 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                Carint
+                REEF AL ABRAR GENERAL TRADING
               </span>
             </a>
 
@@ -80,16 +80,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link scroll-to-section" href="#slider-section">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Services</a>
+                  <a class="nav-link scroll-to-section" href="#service-section">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link scroll-to-section" href="#aboutus-section"> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link scroll-to-section" href="#contact-section">Contact Us</a>
                 </li>
                 <!-- <li class="nav-item">
                   <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
@@ -107,9 +107,9 @@
     </header>
     <!-- end header section -->
     <!-- slider section -->
-    <section class="slider_section ">
+    <section class="slider_section " id="slider-section">
       <div class="slider_bg_box">
-        <img src="images/slider-bg.jpg" alt="">
+        <img src="images/truck-vehicle.jpg" alt="">
       </div>
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -191,7 +191,7 @@
 
   <!-- service section -->
 
-  <section class="service_section layout_padding">
+  <section id="service-section" class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
         <div class="heading_container">
@@ -347,7 +347,7 @@
 
   <!-- about section -->
 
-  <section class="about_section layout_padding-bottom">
+  <section id="aboutus-section" class="about_section layout_padding-bottom">
     <div class="container  ">
       <div class="row">
         <div class="col-md-6">
@@ -375,40 +375,9 @@
 
   <!-- end about section -->
 
-  <!-- track section -->
-
-  <section class="track_section layout_padding">
-    <div class="track_bg_box">
-      <img src="images/track-bg.jpg" alt="">
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="heading_container">
-            <h2>
-              Track Your Shipment
-            </h2>
-          </div>
-          <p>
-            Iste reprehenderit maiores facilis saepe cumque molestias. Labore iusto excepturi, laborum aliquid pariatur veritatis autem, mollitia sint nesciunt hic error porro.
-            Deserunt officia unde repellat beatae ipsum sed. Aperiam tempora consectetur voluptas magnam maxime asperiores quas similique repudiandae, veritatis reiciendis harum fuga atque.
-          </p>
-          <form action="">
-            <input type="text" placeholder="Enter Your Tracking Number" />
-            <button type="submit">
-              Track
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end track section -->
-
 
   <!-- contact section -->
-  <section class="contact_section">
+  <section class="contact_section" id="contact-section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-md-5 offset-md-1">
@@ -469,24 +438,24 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  AKR international export&import,MG ROAD KOCHI
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +971-56-2783627
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  reefalabrargarments@gmail.com
                 </span>
               </a>
             </div>
           </div>
-          <div class="info_social">
+          <!-- <div class="info_social">
             <a href="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
@@ -499,9 +468,9 @@
             <a href="">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
-          </div>
+          </div> -->
         </div>
-        <div class="col-md-6 col-lg-3 info_col">
+        <!-- <div class="col-md-6 col-lg-3 info_col">
           <div class="info_detail">
             <h4>
               Info
@@ -510,26 +479,26 @@
               necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
             </p>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-2 mx-auto info_col">
           <div class="info_link_box">
             <h4>
               Links
             </h4>
             <div class="info_links">
-              <a class="active" href="index.html">
+              <a class="active scroll-to-section"  href="#slider-section">
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
-              <a class="" href="about.html">
+              <a class="scroll-to-section" href="#aboutus-section">
                 <img src="images/nav-bullet.png" alt="">
                 About
               </a>
-              <a class="" href="service.html">
+              <a class="scroll-to-section" href="#service-section">
                 <img src="images/nav-bullet.png" alt="">
                 Services
               </a>
-              <a class="" href="contact.html">
+              <a class="scroll-to-section" href="#contact-section">
                 <img src="images/nav-bullet.png" alt="">
                 Contact Us
               </a>
@@ -557,8 +526,8 @@
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> Copyright ©
+        <a href="https://html.design/">REEF AL ABRAR GENERAL TRADING L.L.C</a>
       </p>
     </div>
   </section>
@@ -580,6 +549,53 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
   <!-- End Google Map -->
+
+  <script>
+    //according to loftblog tut
+    $('.nav li:first').addClass('active');
+
+    var showSection = function showSection(section, isAnimate) {
+      var
+      direction = section.replace(/#/, ''),
+      reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+      reqSectionPos = reqSection.offset().top - 0;
+
+      if (isAnimate) {
+        $('body, html').animate({
+          scrollTop: reqSectionPos },
+        800);
+      } else {
+        $('body, html').scrollTop(reqSectionPos);
+      }
+
+    };
+
+    var checkSection = function checkSection() {
+      $('.section').each(function () {
+        var
+        $this = $(this),
+        topEdge = $this.offset().top - 80,
+        bottomEdge = topEdge + $this.height(),
+        wScroll = $(window).scrollTop();
+        if (topEdge < wScroll && bottomEdge > wScroll) {
+          var
+          currentId = $this.data('section'),
+          reqLink = $('a').filter('[href*=\\#' + currentId + ']');
+          reqLink.closest('li').addClass('active').
+          siblings().removeClass('active');
+        }
+      });
+    };
+
+    $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
+      e.preventDefault();
+      showSection($(this).attr('href'), true);
+    });
+
+    $(window).scroll(function () {
+      checkSection();
+    });
+</script>
 
 </body>
 
