--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/fevicon.png" type="">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
   <title> REEF AL ABRAR GENERAL TRADING </title>
 
@@ -125,7 +126,7 @@
                       Providing end-to-end logistics and trade services, we simplify global commerce with efficient and reliable solutions.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#contact-section" class="btn1">
                         Get A Quote
                       </a>
                     </div>
@@ -146,7 +147,7 @@
                       We help businesses expand beyond boundaries, fostering international partnerships with trusted import-export services.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#contact-section" class="btn1">
                         Get A Quote
                       </a>
                     </div>
@@ -167,7 +168,7 @@
                       Offering comprehensive trade solutions, we connect you to global markets with ease and efficiency.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#contact-section" class="btn1">
                         Get A Quote
                       </a>
                     </div>
@@ -391,32 +392,34 @@
       <div class="row">
         <div class="col-lg-4 col-md-5 offset-md-1">
           <div class="form_container contact-form">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Your Name" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
+            <form action="mailto:dignityfreshtrading.com" method="get" enctype="text/plain">
+              <fieldset>
+                <input name="name" type="text" id="userName" placeholder="NAME" required="">
+              </fieldset>
+              <fieldset>
+                <input name="email" type="text" id="userEmail" pattern="[^ @]*@[^ @]*" placeholder="EMAIL" required="">
+              </fieldset>
+              <fieldset>
+                <input name="subject" type="text" id="subject" placeholder="SUBJECT" required="">
+              </fieldset>
+              <fieldset class="message-box">
+                <textarea name="message" type="text" class="form-control" id="body" placeholder="MESSAGE" required=""></textarea>
+              </fieldset>
               <div class="btn_box">
-                <button>
-                  SEND
-                </button>
+              <fieldset>
+                  <button>
+                    SEND
+                  </button>
+                </fieldset>
               </div>
             </form>
           </div>
         </div>
         <div class="col-lg-7 col-md-6 px-0">
           <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
+            <div id="map"></div>
+            <!-- <div class="map">
+            </div> -->
           </div>
         </div>
       </div>
@@ -429,7 +432,7 @@
   <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-3 info_col">
+        <div class="col-md-6 col-lg-6 info_col">
           <div class="info_contact">
             <h4>
               Address
@@ -505,7 +508,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 info_col ">
+        <!-- <div class="col-md-6 col-lg-3 info_col ">
           <h4>
             Subscribe
           </h4>
@@ -515,7 +518,7 @@
               Subscribe
             </button>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -527,7 +530,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> Copyright ©
-        <a href="https://html.design/">REEF AL ABRAR GENERAL TRADING L.L.C</a>
+        <a >REEF AL ABRAR GENERAL TRADING L.L.C</a>
       </p>
     </div>
   </section>
@@ -546,55 +549,66 @@
   <!-- custom js -->
   <script type="text/javascript" src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+      // Coordinates of the target location (replace with your desired coordinates)
+      const targetLocation = [25.276100, 55.283300]; // Example: New York City
+
+      // Initialize the map centered at the target location
+      const map = L.map('map').setView(targetLocation, 13);
+
+      // Add OpenStreetMap tiles to the map
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+      }).addTo(map);
+
+      // Add a marker at the target location
+      const marker = L.marker(targetLocation).addTo(map);
+
+      // Add a zoom control for navigation
+      L.control.zoom({
+          position: 'topright'
+      }).addTo(map);
   </script>
   <!-- End Google Map -->
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
   <script>
-    //according to loftblog tut
-    $('.nav li:first').addClass('active');
+    // Smooth scroll to sections
+$('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
+  e.preventDefault();
 
-    var showSection = function showSection(section, isAnimate) {
-      var
-      direction = section.replace(/#/, ''),
-      reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-      reqSectionPos = reqSection.offset().top - 0;
+  // Get the target section
+  const targetId = $(this).attr('href');
+  const targetSection = $(targetId);
 
-      if (isAnimate) {
-        $('body, html').animate({
-          scrollTop: reqSectionPos },
-        800);
-      } else {
-        $('body, html').scrollTop(reqSectionPos);
-      }
+  if (targetSection.length) {
+    $('html, body').animate(
+      {
+        scrollTop: targetSection.offset().top - 70, // Adjust the offset as needed
+      },
+      800 // Duration of the animation in milliseconds
+    );
+  }
+});
 
-    };
+// Highlight active section in the navbar while scrolling
+$(window).on('scroll', function () {
+  const scrollPos = $(document).scrollTop();
+  
+  $('.section').each(function () {
+    const sectionTop = $(this).offset().top - 100;
+    const sectionBottom = sectionTop + $(this).outerHeight();
 
-    var checkSection = function checkSection() {
-      $('.section').each(function () {
-        var
-        $this = $(this),
-        topEdge = $this.offset().top - 80,
-        bottomEdge = topEdge + $this.height(),
-        wScroll = $(window).scrollTop();
-        if (topEdge < wScroll && bottomEdge > wScroll) {
-          var
-          currentId = $this.data('section'),
-          reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-          reqLink.closest('li').addClass('active').
-          siblings().removeClass('active');
-        }
-      });
-    };
-
-    $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
-      e.preventDefault();
-      showSection($(this).attr('href'), true);
-    });
-
-    $(window).scroll(function () {
-      checkSection();
-    });
+    if (scrollPos >= sectionTop && scrollPos < sectionBottom) {
+      const currentSectionId = $(this).attr('id');
+      $('.nav-link').removeClass('active');
+      $(`.nav-link[href="#${currentSectionId}"]`).addClass('active');
+    }
+  });
+});
 </script>
 
 </body>
