--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                AKR international export&import,MG ROAD KOCHI
+                Al baraha, Near Dubai hospital
               </span>
             </a>
           </div>
@@ -441,7 +441,7 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  AKR international export&import,MG ROAD KOCHI
+                  Al baraha, Near Dubai hospital
                 </span>
               </a>
               <a href="">
