--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : reefalabrargarments@gmail.com
+                Email : info@reefalabrar.com
               </span>
             </a>
             <a href="">
@@ -453,7 +453,7 @@
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  reefalabrargarments@gmail.com
+                  info@reefalabrar.com
                 </span>
               </a>
             </div>
