contact number removed

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       <div class="header_top">
         <div class="container-fluid ">
           <div class="contact_nav">
-            <a href="">
+            <!-- <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
                 Call : +971-56-2783627
               </span>
-            </a>
+            </a> -->
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
@@ -444,12 +444,12 @@
                   Al baraha, Near Dubai hospital
                 </span>
               </a>
-              <a href="">
+              <!-- <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
                   Call +971-56-2783627
                 </span>
-              </a>
+              </a> -->
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
